# Neuraltune-DSPear

./: CMakeLists.txt  README.md  mlflow.db
k8s/: gpu-cluster-autoscaler.yaml  grafana.yaml  hpa-ray-worker.yaml  prometheus.yaml  ray-cluster.yaml  ray-worker-deployment.yaml  torchserve.yaml
rl/: dsp_env.py  train_ray_rl.py
src/: main.cpp
src/audio/: effects.cpp  effects.h  eq.cpp  eq.h  fft_analysis.cpp  fft_analysis.h  fft_analyzer.cpp  fft_analyzer.h  mixer.cpp  mixer.h  oscillator.cpp  oscillator.h  portaudio_wrapper.cpp  portaudio_wrapper.h  real_time_synthesis.cpp  real_time_synthesis.h  wav_recorder.cpp  wav_recorder.h
src/gui/: daw_gui.cpp  daw_gui.h  dsp_graph.cpp  dsp_graph.h  mlops_pipeline.cpp  mlops_pipeline.h  parameter_controls.cpp  parameter_controls.h  spectrum_visualizer.cpp  spectrum_visualizer.h
src/midi/: midi_controller.cpp  midi_controller.h  midi_quantizer.cpp  midi_quantizer.h  midi_recorder.cpp  midi_recorder.h
src/mlops/: kubernetes_client.cpp  kubernetes_client.h  ml_controller.cpp  ml_controller.h  mlflow.cpp  mlflow.h  mlflow_client.cpp  mlflow_client.h  pytorch_inference.cpp  rl_optimizer.cpp  rl_optimizer.h  torchserve_client.py
